# foodgram-project-react

./: .gitignore  README.md  setup.cfg
.github/workflows/: foodgram_workflow.yml
backend/: fixtures.json  manage.py  requirements.txt  setup.cfg
backend/api/: fields.py  filters.py  permissions.py  serializers.py  urls.py  views.py
backend/api/recipes/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/api/recipes/migrations/: 0001_initial.py  0002_auto_20220322_2348.py  0003_auto_20220323_1110.py
backend/api/services/: admin.py  models.py  serializers.py  urls.py  views.py
backend/api/services/migrations/: 0001_initial.py  0002_auto_20220322_2348.py
backend/api/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/api/users/migrations/: 0001_initial.py
backend/apps/core/: models.py  serializers.py  views.py
backend/apps/recipes/: admin.py  models.py
backend/apps/recipes/migrations/: 0001_initial.py  0002_auto_20220406_0752.py
backend/apps/services/: admin.py  models.py
backend/apps/services/migrations/: 0001_initial.py  0002_auto_20220406_0752.py
backend/apps/users/: admin.py  models.py
backend/apps/users/migrations/: 0001_initial.py
backend/backend/: settings.py  urls.py
backend/config/: settings.py  urls.py
backend/core/: filters.py  models.py  permissions.py  serializers.py  views.py
backend/static/docs/: redoc.html
frontend/: package.json
frontend/src/: App.js
infra/: docker-compose.yml
infra/local/: docker-compose.yml  nginx.conf
infra/nginx/: default.conf  proxy_params
(+22 files in other folders)
