[options]
include_package_data = True

[flake8]
exclude =
    */migrations/,
per-file-ignores =
    */settings.py:E501

[isort]
no_lines_before = THIRDPARTY
known_stdlib = django, rest_framework
known_third_party = drf_base64, djoser, django_filters
known_first_party = api
known_local_folder = core
multi_line_output = 1